2005-11-07  John Sullivan  <john@wjsullivan.net>

	* delicious.el (delicious-posts-matching-tags): Added
	(bury-buffer) so that 'q' from the results buffer doesn't take us
	to the .delicious posts buffer.
	(delicious-posts-matching-tags-any): Same here.
	(delicious-posts-matching-date): And here.
	(delicious-post-matching-hash): Here too.
	(delicious-search-href-regexp): And here, also added save-window-excursion.
	(delicious-search-tags-regexp): Same here.
	(delicious-search-description-regexp): And here.
	(delicious-search-posts-regexp): Finally, here.

2005-11-03  John Sullivan  <john@wjsullivan.net>

	* delicioapi.el (delicious-api-register-auth): The Debian packaged
	version of url.el is now closer to or even the same as the CVS
	Emacs version. However, the Debian package version still has its
	same old url-version, "Exp"! I applied fixes to make auth work
	again. People using older Debian packaged versions who run into
	trouble will want to either get the CVS Emacs version of the url
	files, or pull the w3-url-e21 package from Debian unstable.

2005-10-23  John Sullivan  <john@wjsullivan.net>

	* delicious.el (delicious-posts-file): New function to return the
	full path for the posts file.
	(delicious-get-posts-buffer): Use new `delicious-posts-file'
	function.
	(delicious-update-timestamp): Use new
	`delicious-posts-file'. Should fix the problem of the disappearing
	timestamp. Thanks to Gunnar Wrobel for the bug report.

2005-10-16  John Sullivan  <john@wjsullivan.net>

	* delicious.el (delicious-update-timestamp): Fix bug that was
	causing the timestamp in new posts files to get bumped to the end
	of the file. 
	(delicious-save-buffer): Add new argument, NO-BURY, for situations
	when we want to save the buffer but not bury it. 

2005-10-13  John Sullivan  <john@wjsullivan.net>

	* delicioapi.el (url-auth): Add missing require needed for
	url-version "Emacs", and maybe others too. Solves error about
	url-is-cached.
